[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_marcus_maro"
version = "0.0.1"
authors = [
  { name="Marcus Marosvari", email="mdmarosvari@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
